git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1660 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/ar/Training_Materials.html
+++ b/CurrentRelease/ar/Training_Materials.html
@@ -42,7 +42,7 @@
             <tr id="pagetoptable1row1">
                 <td align="right">
                     <span id="projecttitle">
-                        معاونة مباشرة باستخدام الانترنيت على موقع  البوابة المركزية لغرفة تبادل معلومات السلامة الأحيائية
+                        
                     </span>
                 </td>
                 <td align="right">
@@ -70,10 +70,12 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=Section1>
-<P class=MsoNormal><SPAN lang=EN-US style="FONT-SIZE: 10pt; COLOR: black; mso-ansi-language: EN-US"><FONT face=Arial><SPAN lang=AR-LB dir=rtl style="FONT-SIZE: 11pt; LINE-HEIGHT: 115%; FONT-FAMILY: 'Times New Roman'; mso-ansi-language: EN-US; mso-ascii-font-family: Calibri; mso-fareast-font-family: Calibri; mso-hansi-font-family: Calibri; mso-fareast-language: EN-US; mso-bidi-language: AR-LB"><SPAN lang=AR-LB dir=rtl style="FONT-SIZE: 11pt; LINE-HEIGHT: 115%; FONT-FAMILY: 'Times New Roman'; mso-ansi-language: EN-US; mso-ascii-font-family: Calibri; mso-fareast-font-family: Calibri; mso-hansi-font-family: Calibri; mso-fareast-language: EN-US; mso-bidi-language: AR-LB">تم مراجعة مواد التدريب في اللغة العربية</SPAN></SPAN></FONT></SPAN></P>
-<P class=MsoNormal><SPAN lang=AR-SA dir=rtl style="FONT-SIZE: 11pt; LINE-HEIGHT: 115%; FONT-FAMILY: 'Times New Roman'; mso-ansi-language: EN-US; mso-ascii-font-family: Calibri; mso-fareast-font-family: Calibri; mso-hansi-font-family: Calibri; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><SPAN lang=AR-SA dir=rtl style="FONT-SIZE: 11pt; LINE-HEIGHT: 115%; FONT-FAMILY: 'Times New Roman'; mso-ansi-language: EN-US; mso-ascii-font-family: Calibri; mso-fareast-font-family: Calibri; mso-hansi-font-family: Calibri; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><SPAN lang=AR-SA dir=rtl style="FONT-SIZE: 11pt; LINE-HEIGHT: 115%; FONT-FAMILY: 'Times New Roman'; mso-ansi-language: EN-US; mso-ascii-font-family: Calibri; mso-fareast-font-family: Calibri; mso-hansi-font-family: Calibri; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">للغة الانجليزية، اضغط على</SPAN></SPAN></SPAN></P><SPAN lang=EN-US style="FONT-SIZE: 10pt; COLOR: black; mso-ansi-language: EN-US"></SPAN>
-<P class=MsoNormal><SPAN lang=EN-US style="FONT-SIZE: 10pt; COLOR: black; mso-ansi-language: EN-US"><A href="http://bch.cbd.int/help/topics/en/webframe.html?Training_Materials.html" target=_blank>http://bch.cbd.int/help/topics/en/webframe.html?Training_Materials.html</A></SPAN></P></DIV>
+<DIV class=Section1><SPAN lang=EN-US style="FONT-SIZE: 10pt; COLOR: black; mso-ansi-language: EN-US"><FONT size=3>
+<P dir=rtl><FONT size=3>تتركب الوحدات النموذجية للتدريب حول غرفة تبادل معلومات السلامة الإحيائية من مجموعة متماسكة من أقسام تدريبية. هذه الأقسام لها محتوى ذاتي، يعني ذلك أنه بالإمكان وضع مكونات مختلفة بعضها مع بعض في صيغ مختلفة تناسب الجماهير المستهدفة.</FONT></P>
+<P dir=rtl><FONT size=3>انقر هنا لإنزال صورة قرص الذاكرة المدمج CD-ROM مع عدة التدريب حول غرفة تبادل معلومات السلامة الإحيائية</FONT></P>
+<P dir=rtl><FONT size=3>ملاحظة:</FONT></P>
+<P dir=rtl><FONT size=3>يجب فتح الملف ثم نسخ الصورة ISO على قرص ذاكرة مدمج CD-ROM . للتعليمات حول كيف تفعل ذلك انظر الدليل الموفر مع برنامج كتابة قرص الذاكرة المدمج CD ROM .</FONT></P>
+<P dir=rtl><FONT size=3>ن الصور ISO لا تحفظ على أقراص الذاكرة المدمجة CD-ROM بنفس الطريقة التي تحفظ بها ملفات البيانات العادية</FONT></P></FONT><A href="http://bch.cbd.int/help/topics/en/webframe.html?Training_Materials.html" target=_blank></A></SPAN></DIV>
             <a name="seealsobookmark"></a>
             
         </div>
