--- a/CurrentRelease/ar/webtoc.html
+++ b/CurrentRelease/ar/webtoc.html
@@ -412,7 +412,7 @@
 <li class="tbc" icon="-1" isnew="False"><a href="Meetings_and_Documents2.html"><img class="icon"/><span class="nodetext">الاجتماع والوثائق</span></a>
 <li class="tbc" icon="-1" isnew="False"><a href="Notificacions.html"><img class="icon"/><span class="nodetext">الإخطارات</span></a>
 </ul>
-<li class="tbc" icon="-1"><a href="#" target="lbottom"><img class="icon"/><span class="nodetext">إيجاد المعلومات</span></a>
+<li class="tbc" icon="-1"><a href="#" target="lbottom"><img class="icon"/><span class="nodetext"></span></a>
 <ul class='tbc'>
 <li class="tbc" icon="-1" isnew="False"><a href="Finding_Information_.html"><img class="icon"/><span class="nodetext">إيجاد المعلومات</span></a>
 <ul class='tbc'>
@@ -659,6 +659,21 @@
 <li class="tbc" icon="-1" isnew="False"><a href="Information-sharing for non-Parties.html"><img class="icon"/><span class="nodetext">تبادل المعلومات بين غير الأطراف فى البروتوكول</span></a>
 </ul>
 <li class="tbc" icon="-1" isnew="False"><a href="Training_Materials.html"><img class="icon"/><span class="nodetext">مواد التدريب</span></a>
+<ul class='tbc'>
+<li class="tbc" icon="-1" isnew="False"><a href="Using BCH training modules to meet stakeholder needs.html"><img class="icon"/><span class="nodetext">استعمال  برامج التمرين حول غرفة تبادل المعلومات لسد احتياجات الفرقاء المعنيين</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Stakeholder curricula.html"><img class="icon"/><span class="nodetext">المناهج لمختلف الفرقاء</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Training_Modules.html"><img class="icon"/><span class="nodetext">الوحدات النموذجية للتدريب</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Interactive_Modules.html"><img class="icon"/><span class="nodetext">وحدات التدريب النموذجية المتفاعلة</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Case_Studies.html"><img class="icon"/><span class="nodetext">دراسة حالات</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Ready_Reference_Guide.html"><img class="icon"/><span class="nodetext">دليل جاهز للمراجع</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Discussion_Points_with_answer_Key.html"><img class="icon"/><span class="nodetext">نقاط المناقشات مع مفاتيح الاجوبة</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Quiz_Questions_with_Answer_keys.html"><img class="icon"/><span class="nodetext">مسابقة من اسئلة مع مفاتيح الاجوبة</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Operational_Handbook.html"><img class="icon"/><span class="nodetext">دليل تطبيقي</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Promotional_Materials.html"><img class="icon"/><span class="nodetext">المواد الترويجية</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="Exercises.html"><img class="icon"/><span class="nodetext">التمارين</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="HERMES_BCH_Development_Tool.html"><img class="icon"/><span class="nodetext">آدات تطوير غرفة تبادل معلومات السلامة الاحيائية وفقا لهرمس</span></a>
+<li class="tbc" icon="-1" isnew="False"><a href="AJAX_BCH_Development_Tool.html"><img class="icon"/><span class="nodetext">آدات تطوير غرفة تبادل معلومات السلامة الاحيائية وفقا لاجاكس</span></a>
+</ul>
 </ul>
 
 
