git-svn-id: https://subversion.cbd.int/svn/repo/Bch/Help@1743 ca237ed5-24d0-bc44-ad4d-3f151b82840b

--- a/CurrentRelease/en/AJAX_BCH_Development_Tool.html
+++ b/CurrentRelease/en/AJAX_BCH_Development_Tool.html
@@ -70,15 +70,11 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P class=MsoNormal><SPAN lang=EN-CA>The BCH Ajax Plug-In is a lightweight JavaScript application based on Ajax technology that can be easily integrated to any website to allow dynamic display of information from the BCH Central Portal.</SPAN></P>
-<P class=MsoNormal></P>
-<P class=MsoNormal><SPAN lang=EN-CA>The use of the BCH Ajax Plug-In does not require any specific IT knowledge. The Plug-In works on all server platforms and does not require any software installation. All required files are located on the BCH Central Portal and maintained by the Secretariat.</SPAN></P>
-<P class=MsoNormal></P>
-<DIV><SPAN lang=EN-CA>The BCH Ajax Plug-In is a client side application. The connection to the BCH Central Portal is made directly by the client (end-user).</SPAN> </DIV>
-<DIV>
-<DIV><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=347&amp;username=guest&amp;password=guest" target=_blank>Ajax User Manual</A> </DIV>
-<DIV>
-<DIV><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=348&amp;username=guest&amp;password=guest" target=_blank>BCH Ajax PlugIn Exercise</A> </DIV></DIV></DIV>
+<P><STRONG>The BCH Ajax Plug-In is a lightweight JavaScript application based on Ajax technology that can be easily integrated to any website to allow dynamic display of information from the BCH Central Portal.</STRONG></P>
+<P><STRONG>The use of the BCH Ajax Plug-In does not require any specific IT knowledge. The Plug-In works on all server platforms and does not require any software installation. All required files are located on the BCH Central Portal and maintained by the Secretariat.</STRONG></P>
+<P><STRONG>The BCH Ajax Plug-In is a client side application. The connection to the BCH Central Portal is made directly by the client (end-user).</STRONG></P>
+<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/13) Ajax BCH Development tool/AX01En.pdf" target=_blank>Ajax User Manual</A></P>
+<P class=MsoNormal><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/13) Ajax BCH Development tool/AX02En.pdf" target=_blank>BCH Ajax PlugIn Exercise</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
