--- a/CurrentRelease/en/Exercises.html
+++ b/CurrentRelease/en/Exercises.html
@@ -70,8 +70,8 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>&nbsp;Exercises for BCH Training Workshops</P>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=430&amp;username=guest&amp;password=guest" target=_blank>Exercises A - F</A> </DIV>
+<P><STRONG>Exercises for BCH Training Workshops</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/11) Exercises/AE01En.pdf" target=_blank>Exercises A - F</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
