--- a/CurrentRelease/en/HERMES_BCH_Development_Tool.html
+++ b/CurrentRelease/en/HERMES_BCH_Development_Tool.html
@@ -70,26 +70,24 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>Recently, SCBD has deployed a new application, code name HERMES, that can be used easily by countries willing to have their own simple national application, but do not have the resources to, or do not want to develop their own systems.</P>
-<DIV class=summary>
-<P>HERMES will run on SCBD servers, instantiated for each particular country. At the country level, it is just needed to have available computers with internet access and browsers. Customization is also performed via internet.</P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=351&amp;username=guest&amp;password=guest" target=_blank>Hermes User Guide</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=352&amp;username=guest&amp;password=guest" target=_blank>Practical Exercise Using HERMES</A></P>
-<DIV class=summary>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=432&amp;username=guest&amp;password=guest" target=_blank>Tutorial Modules 1 and 2</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=433&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module 3</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=434&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_4_Part 1</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=435&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_4_Part_2</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=436&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_4_Part_3</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=437&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_5_ Part 1</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=438&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_5_Part_2</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=439&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_5_Part_3</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=440&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_5_Part_4</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=441&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_5_Part_5</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=442&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_5_Part_6</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=443&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_5_Part_7</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=444&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_6_Part 1</A></P>
-<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=445&amp;username=guest&amp;password=guest" target=_blank>Tutorial Module_6_Part_2</A></P></DIV></DIV>
+<P><STRONG>Recently, SCBD has deployed a new application, code name HERMES, that can be used easily by countries willing to have their own simple national application, but do not have the resources to, or do not want to develop their own systems.</STRONG></P>
+<P><STRONG>HERMES will run on SCBD servers, instantiated for each particular country. At the country level, it is just needed to have available computers with internet access and browsers. Customization is also performed via internet.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HM01En.pdf" target=_blank>Hermes User Guide</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HM02En.pdf" target=_blank>Practical Exercise Using HERMES</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT01En.ppt" target=_blank>Tutorial Modules 1 and 2</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT02En.ppt" target=_blank>Tutorial Module 3</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT03En.ppt" target=_blank>Tutorial Module 4 Part 1</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT04En.ppt" target=_blank>Tutorial Module 4_Part 2</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT05En.ppt" target=_blank>Tutorial Module 4_Part 3</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT06En.ppt" target=_blank>Tutorial Module 5 Part 1</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT07En.ppt" target=_blank>Tutorial Module 5 Part 2</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT08En.ppt" target=_blank>Tutorial Module 5 Part 3</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT09En.ppt" target=_blank>Tutorial Module 5 Part 4</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT10En.ppt" target=_blank>Tutorial Module 5 Part 5</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT11En.ppt" target=_blank>Tutorial Module 5 Part 6</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT12En.ppt" target=_blank>Tutorial Module 5 Part 7</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT13En.ppt" target=_blank>Tutorial Module 6 Part 1</A></P>
+<P><IMG class=activityicon alt=Resource src="images/powerpoint.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/12) Hermes BCH Development tool/HT14En.ppt" target=_blank>Tutorial Module 6 Part 2</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
