--- a/CurrentRelease/en/Operational_Handbook.html
+++ b/CurrentRelease/en/Operational_Handbook.html
@@ -70,11 +70,11 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>The Operational Handbook provides detailed information for countries about participating in the UNEP-GEF Project for “Effective Participation in the Biosafety Clearing-House (BCH). </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=416&amp;username=guest&amp;password=guest" target=_blank>Operational Handbook</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=417&amp;username=guest&amp;password=guest" target=_blank>Annex 7</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/word.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=426&amp;username=guest&amp;password=guest" target=_blank>Form 9</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/word.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=427&amp;username=guest&amp;password=guest" target=_blank>Form 10</A>&nbsp; </DIV>
+<P><STRONG>The Operational Handbook provides detailed information for countries about participating in the UNEP-GEF Project for “Effective Participation in the Biosafety Clearing-House (BCH).</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/09) Operational Handbook/OH01En.pdf" target=_blank>Operational Handbook</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/09) Operational Handbook/OH02En.pdf" target=_blank>Annex 7</A></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/09) Operational Handbook/OH11En.doc" target=_blank>Form 9</A></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/09) Operational Handbook/OH12En.doc" target=_blank>Form 10</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
