--- a/CurrentRelease/en/Quiz_Questions_with_Answer_keys.html
+++ b/CurrentRelease/en/Quiz_Questions_with_Answer_keys.html
@@ -70,11 +70,10 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>There are several quiz questions available that provide quick interaction with participants and an easy way to gauge understanding of different uses of the BCH and may be used throughout the training.</P>
-<P>&nbsp;</P>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=413&amp;username=guest&amp;password=guest" target=_blank>Quick Quiz Cards</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=414&amp;username=guest&amp;password=guest" target=_blank>Quick Quiz with Answers</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=415&amp;username=guest&amp;password=guest" target=_blank>Scanvenger Hunt</A> </DIV>
+<P><STRONG>There are several quiz questions available that provide quick interaction with participants and an easy way to gauge understanding of different uses of the BCH and may be used throughout the training.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/08) Quiz Question with Answer Keys/QZ01En.pdf" target=_blank>Quick Quiz Cards</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/08) Quiz Question with Answer Keys/QZ02En.pdf" target=_blank>Quick Quiz with Answers</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/08) Quiz Question with Answer Keys/QZ03En.pdf" target=_blank>Scanvenger Hunt</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
