--- a/CurrentRelease/en/Ready_Reference_Guide.html
+++ b/CurrentRelease/en/Ready_Reference_Guide.html
@@ -70,20 +70,20 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>There are several reference handouts available that provide quick overviews of frequently used parts of the BCH and may be used as desk references after training is complete<BR><BR><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=397&amp;username=guest&amp;password=guest" target=_blank>BCH Quick Start</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=398&amp;username=guest&amp;password=guest" target=_blank>Acronyms</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=399&amp;username=guest&amp;password=guest" target=_blank>BCH Record Types</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=400&amp;username=guest&amp;password=guest" target=_blank>Icons</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=401&amp;username=guest&amp;password=guest" target=_blank>Short glossary</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=402&amp;username=guest&amp;password=guest" target=_blank>Management Centre</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=403&amp;username=guest&amp;password=guest" target=_blank>Decisions and Declarations</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=404&amp;username=guest&amp;password=guest" target=_blank>Introduced Traits</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=405&amp;username=guest&amp;password=guest" target=_blank>Contacts</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=406&amp;username=guest&amp;password=guest" target=_blank>Information Resources</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=407&amp;username=guest&amp;password=guest" target=_blank>Unique identification</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=408&amp;username=guest&amp;password=guest" target=_blank>Information to be posted on the BCH</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=409&amp;username=guest&amp;password=guest" target=_blank>Timeframe for Posting Information</A></P>
-<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=410&amp;username=guest&amp;password=guest" target=_blank>New Party Checklist</A></P>
+<P><STRONG>There are several reference handouts available that provide quick overviews of frequently used parts of the BCH and may be used as desk references after training is complete.</STRONG><BR><BR><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR01En.pdf" target=_blank>BCH Quick Start</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR02En.pdf" target=_blank>Acronyms</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR03En.pdf" target=_blank>BCH Record Types</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR04En.pdf" target=_blank>Icons</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR05En.pdf" target=_blank>Short glossary</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR06En.pdf" target=_blank>Management Centre</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR07En.pdf" target=_blank>Decisions and Declarations</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR08En.pdf" target=_blank>Introduced Traits</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR09En.pdf" target=_blank>Contacts</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR10En.pdf" target=_blank>Information Resources</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR11En.pdf" target=_blank>Unique identification</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR12En.pdf" target=_blank>Information to be posted on the BCH</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR13En.pdf" target=_blank>Timeframe for Posting Information</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/06) Ready Reference Guides/RR14En.pdf" target=_blank>New Party Checklist</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
