--- a/CurrentRelease/en/Stakeholder curricula.html
+++ b/CurrentRelease/en/Stakeholder curricula.html
@@ -70,15 +70,15 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>Summarizes all the available training resources and outlines model curricula for each of tha stakeholder groups.</P><TR><TD class="activity resource">
-<P class=MsoNormal><IMG src="images/pdf.gif" border=0>&nbsp;<A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=126&amp;username=guest&amp;password=guest" target=_blank>National Data Entry</A></TD></TR><TR><TD class="activity resource"></P>
-<P class=MsoNormal><IMG class=activityicon src="images/pdf.gif" border=0> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=127&amp;username=guest&amp;password=guest" target=_blank>Information Generators</A></TD></TR><TR><TD class="activity resource"></P>
-<P class=MsoNormal><IMG class=activityicon src="images/pdf.gif" border=0> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=128&amp;username=guest&amp;password=guest" target=_blank>NGOs and Civil Society</A></TD></TR><TR><TD class="activity resource"></P>
-<P class=MsoNormal><IMG class=activityicon src="images/pdf.gif" border=0> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=129&amp;username=guest&amp;password=guest" target=_blank>Industry Groups</A></TD></TR><TR><TD class="activity resource"></P>
-<P class=MsoNormal><IMG class=activityicon src="images/pdf.gif" border=0> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=130&amp;username=guest&amp;password=guest" target=_blank>Scientists, Academics, Biosafety Organizations</A></TD></TR><TR><TD class="activity resource"></P>
-<P class=MsoNormal><IMG class=activityicon src="images/pdf.gif" border=0>&nbsp;<A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=131&amp;username=guest&amp;password=guest" target=_blank>Customs and Border Control</A></TD></TR><TR><TD class="activity resource"></P>
-<P class=MsoNormal><IMG class=activityicon src="images/pdf.gif" border=0> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=132&amp;username=guest&amp;password=guest" target=_blank>Media</A></TD></TR><TR><TD class="activity resource"></P>
-<P class=MsoNormal><IMG class=activityicon src="images/pdf.gif" border=0> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=133&amp;username=guest&amp;password=guest" target=_blank>General Public</A></TD></TR></P>
+<P><STRONG>Summarizes all the available training resources and outlines model curricula for each of the stakeholder groups.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC01En.pdf" target=_blank>National Data Entry</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC02En.pdf" target=_blank>Information Generators</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC03En.pdf" target=_blank>Ngos and Civil Society</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC04En.pdf" target=_blank>Industry Group</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC05En.pdf" target=_blank>Scientist,Academics, Bisoafety Organizations</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC06En.pdf" target=_blank>Customs and border control</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC07En.pdf" target=_blank>Media</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/02) Stakeholder curricula/CC08En.pdf" target=_blank>General Public</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
