--- a/CurrentRelease/en/Training_Modules.html
+++ b/CurrentRelease/en/Training_Modules.html
@@ -70,16 +70,16 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>There are several training modules available in PDF format, which provide a range of information from introductory material to in-depth review. Most modules contain interactive exercises and detailed walk-throughs of the steps required for each activity. </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=360&amp;username=guest&amp;password=guest" target=_blank>An Introduction to CPB</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=361&amp;username=guest&amp;password=guest" target=_blank>Introduction to BCH</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=362&amp;username=guest&amp;password=guest" target=_blank>Surfing the BCH Central Portal</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=363&amp;username=guest&amp;password=guest" target=_blank>Finding Information in the BCH</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=364&amp;username=guest&amp;password=guest" target=_blank>Recommended Guidelines for Countries</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=365&amp;username=guest&amp;password=guest" target=_blank>Using the Management Center</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=366&amp;username=guest&amp;password=guest" target=_blank>Registering National Information in the BCH Central Portal</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=367&amp;username=guest&amp;password=guest" target=_blank>Sharing Biosafety Information on the BCH Central</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=368&amp;username=guest&amp;password=guest" target=_blank>Becoming a Party</A>&nbsp; </DIV>
+<P><STRONG>There are several training modules available in PDF format, which provide a range of information from introductory material to in-depth review. Most modules contain interactive exercises and detailed walk-throughs of the steps required for each activity.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO01En.pdf" target=_blank>An Introduction to Cartagena Protocol on Biosafety</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO02En.pdf" target=_blank>Introduction to BCH</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO03En.pdf" target=_blank>Surfing the BCH Central Portal</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO04En.pdf" target=_blank>Finding Information in the BCH</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO05En.pdf" target=_blank>Recommended Guidelines for Countries</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO06En.pdf" target=_blank>Using the Management Center</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO07En.pdf" target=_blank>Registering National Information in the BCH Central Portal</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO08En.pdf" target=_blank>Sharing Biosafety Information on the BCH Central</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/03) Training Modules/MO10En.pdf" target=_blank>Becoming a Party</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
