--- a/CurrentRelease/en/Using BCH training modules to meet stakeholder needs.html
+++ b/CurrentRelease/en/Using BCH training modules to meet stakeholder needs.html
@@ -70,11 +70,8 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>Provides guidance to instructors using the BCH Training Modules to train a variety of different stakeholders</P>
-<DIV class=Section1>
-<P class=MsoNormal>&nbsp;</P>
-<P class=MsoNormal><IMG alt="" src="images/pdf.gif" border=0>&nbsp;<A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=147&amp;username=guest&amp;password=guest" target=_blank>Guidance document</A></P>
-<P class=MsoNormal>&nbsp;</P></DIV>
+<P><STRONG>Provides guidance to instructors using the BCH Training Modules to train a variety of different stakeholders.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/En/01) Using BCH training modules to meet stakeholder needs/GD01En.pdf" target=_blank>Guidance Document</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
