--- a/CurrentRelease/en/Discussion_Points_with_answer_Key.html
+++ b/CurrentRelease/en/Discussion_Points_with_answer_Key.html
@@ -70,9 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<DIV class=summary>There are several cards with different scenarios for discussion that can be used throughout the training along with the answer keys </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=411&amp;username=guest&amp;password=guest" target=_blank>Discussion Points</A> </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=412&amp;username=guest&amp;password=guest" target=_blank>Discussion_Points with Answers</A>&nbsp; </DIV>
+<P><STRONG>There are several cards with different scenarios for discussion that can be used throughout the training along with the answer keys</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/07) Discussion Points with Answer Keys/DP01En.pdf" target=_blank>Discussion Points</A></P>
+<P><IMG class=activityicon alt=Resource src="images/pdf.gif"> <A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/07) Discussion Points with Answer Keys/DP02En.pdf" target=_blank>Discussion Points with Answers</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
