--- a/CurrentRelease/en/Interactive_Modules.html
+++ b/CurrentRelease/en/Interactive_Modules.html
@@ -70,9 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>There are two interactive training modules designed to enable users to understand the concepts introduced in Training Modules 1 and 2 in a hands-on manner. The modules are designed in Macromedia Flash. Please feel free to download and install the interactive modules.<BR></P>
-<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A href="http://moodle.unep.ch/mod/resource/view.php?id=369&amp;username=guest&amp;password=guest" target=_blank>Introduction to the Cartagena Protocol on Biosafety</A></P>
-<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A href="http://moodle.unep.ch/mod/resource/view.php?id=370&amp;username=guest&amp;password=guest" target=_blank>Introduction to the Biosafety Clearing-House</A></P>
+<P><STRONG>There are two interactive training modules designed to enable users to understand the concepts introduced in Training Modules 1 and 2 in a hands-on manner. The modules are designed in Macromedia Flash.Please feel free to download and install the interactive modules.</STRONG></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/04) Interactive Modules/IM01En.exe" target=_blank>Introduction to the Cartagena Protocol on Biosafety</A></P>
+<P><IMG alt="" src="images/web.gif" border=0>&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/04) Interactive Modules/IM02En.exe" target=_blank>Introduction to the Biosafety Clearing-House</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
