--- a/CurrentRelease/en/Promotional_Materials.html
+++ b/CurrentRelease/en/Promotional_Materials.html
@@ -70,9 +70,9 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>&nbsp;</P>
-<DIV class=summary>This folder contains a one page poster and a short leaflet with basic content that can be customized by the country running the stakeholder courses and used as promotional materials. </DIV>
-<DIV class=summary><IMG class=activityicon alt=Resource src="images/word.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=428&amp;username=guest&amp;password=guest" target=_blank>BCH Flyer</A><BR><IMG class=activityicon alt=Resource src="images/word.gif"> <A href="http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=429&amp;username=guest&amp;password=guest" target=_blank>BCH Poster</A> </DIV>
+<P><STRONG>This folder contains a one page poster and a short leaflet with basic content that can be customized by the country running the stakeholder courses and used as promotional materials.</STRONG></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif">&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/10) Promotional Materials/PM01En.doc" target=_blank>BCH Flyer</A></P>
+<P><IMG class=activityicon alt=Resource src="images/word.gif">&nbsp;<A title=Resource href="http://bch.cbd.int/help/trainingmaterials/En/10) Promotional Materials/PM02En.doc" target=_blank>BCH Poster</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
